--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "IdCia": "1",
-  "Usuario": "unoeetest",
-  "Clave": "unoeet13234asdaest"
+  "Usuario": "cyseg-sperea",
+  "Clave": "Syceg2025"
 }
